# VulnScan

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  common.pri  development-roadmap.md  outreach-guide.md  project-state.md  prompt-main.md  prompt-original-backup.md  prompt.md  vulnscan.pro
.claude/: settings.local.json
docs/: TESTING.md  requirements.md
docs/fasi/: README.md  fase1-foundation.md  fase2-network-scanner.md  fase2-sessions.md  fase3-session1-bugfixes.md  fase3-sessions.md  fase3-vulnerability.md  fase4-ai-integration.md  fase4-sessions.md  fase5-gui.md  fase6-advanced.md  fase7-devops.md  fase8-documentation.md  fase9-educational.md
resources/database/: README.md  schema.sql
src/cli/: CMakeLists.txt  CliApplication.cpp  CliApplication.h  CommandLineParser.cpp  CommandLineParser.h  cli.pro  main.cpp
src/core/: CMakeLists.txt  core.pro
src/core/ai/: AIAnalysis.h  IAIProvider.h
src/core/common/: GuiLogger.cpp  GuiLogger.h  Logger.cpp  Logger.h
src/core/config/: Configuration.cpp  Configuration.h
src/core/database/: DatabaseManager.cpp  DatabaseManager.h  IRepository.h  ScanRepository.cpp  ScanRepository.h
src/core/report/: CsvReportGenerator.cpp  CsvReportGenerator.h  IReportGenerator.h  JsonReportGenerator.cpp  JsonReportGenerator.h  ReportData.h
src/core/scanner/: DnsResolver.cpp  DnsResolver.h  IScanner.h  IVulnerabilityChecker.h  NetworkInterface.cpp  NetworkInterface.h  PortResult.h  PortScanner.cpp  PortScanner.h  ScanConfiguration.cpp  ScanConfiguration.h  ScanEngine.cpp  ScanEngine.h  ScanResult.h  ScanWorker.cpp  ScanWorker.h  ServiceDetector.cpp  ServiceDetector.h  ServiceInfo.h  Vulnerability.h
src/core/vulnerability/: CveSeeder.cpp  CveSeeder.h  FtpVulnChecker.cpp  FtpVulnChecker.h  HttpVulnChecker.cpp  HttpVulnChecker.h  ServiceVulnChecker.cpp  ServiceVulnChecker.h  SshVulnChecker.cpp  SshVulnChecker.h  SslTlsChecker.cpp  SslTlsChecker.h  VulnerabilityDatabase.cpp  VulnerabilityDatabase.h  VulnerabilityMatcher.cpp  VulnerabilityMatcher.h  VulnerabilityScanner.cpp  VulnerabilityScanner.h  VulnerabilityWorker.cpp  VulnerabilityWorker.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  gui.pro  main.cpp
tests/: CMakeLists.txt  IntegrationTests.cpp  IntegrationTests.h  IntegrationTestsVuln.cpp  IntegrationTestsVuln.h  TestConfiguration.cpp  TestConfiguration.h  TestDatabaseManager.cpp  TestDatabaseManager.h  TestDnsResolver.cpp  TestDnsResolver.h  TestNetworkInterface.cpp  TestNetworkInterface.h  TestPortScanner.cpp  TestPortScanner.h  TestReportGenerator.cpp  TestReportGenerator.h  TestScanEngine.cpp  TestScanEngine.h  TestScanRepository.cpp  TestScanRepository.h  TestServiceDetector.cpp  TestServiceDetector.h  TestServiceVulnChecker.cpp  TestServiceVulnChecker.h  TestSslTlsChecker.cpp  TestSslTlsChecker.h  TestVulnerabilityDatabase.cpp  TestVulnerabilityDatabase.h  TestVulnerabilityMatcher.cpp  TestVulnerabilityMatcher.h  TestVulnerabilityScanner.cpp  TestVulnerabilityScanner.h  main.cpp  tests.pro
